first milestone complete

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,15 @@ PRIVATE_KEY='0x...'
 PUBLIC_KEY='0x...'
 ETHERSCAN_API_KEY=''
 ENTRY_POINT='0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789'
+
+# Sample ERC20 Token. Ex: UNI
+ERC20_TOKEN='0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984'
+
+# Deployed Payamster Address
+PAYMASTER=''
+
+# deposit amount in wei, ex: 1ETH
+DEPOSIT_AMOUNT="1000000000000000000"
+
+# Set maxCostAllowed in wei, ex: 0.5ETH
+MAX_COST_ALLOWED="500000000000000000"
