--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
-[submodule "lib/axiom-std"]
-	path = lib/axiom-std
-	url = https://github.com/axiom-crypto/axiom-std
+[submodule "lib/uniswap-gov"]
+	path = lib/uniswap-gov
+	url = https://github.com/meliopolis/uniswap-gov
