--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ libs = ['lib']
 
 optimizer = true
 optimizer_runs = 200 
+memory_limit = 183554432
 
 [rpc_endpoints]
 sepolia = "${SEPOLIA_RPC_URL}"
