forge install: uniswap-gov

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/compound-protocol"]
 	path = lib/compound-protocol
 	url = https://github.com/compound-finance/compound-protocol
+[submodule "lib/uniswap-gov"]
+	path = lib/uniswap-gov
+	url = https://github.com/meliopolis/uniswap-gov
