Updates for OZGovernor

--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,25 @@ ENTRY_POINT='0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789'
 
 # Sample ERC20 Token. Ex: UNI
 ERC20_TOKEN='0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984'
+GOVERNOR='0x71b27a1e1175B1ad0165b16cd7A608B670988CF0'
 
-# Deployed Payamster Address
-PAYMASTER=''
+# Deployed Paymaster Address
+# DELEGATE_PAYMASTER='0xCd756bF371DC72Aa8C7F723d3A1B5FC58967f976'
+# CAST_VOTE_PAYMASTER='0x29CCd14b25726c51Aa3A6D795a6ec25d2aA28DA0'
+# DELEGATE_AND_CAST_VOTE_PAYMASTER='0xC89E3aDB9a71BbB3d0Ef23Baa681099e4D5c0679'
+PAYMASTER='0xC89E3aDB9a71BbB3d0Ef23Baa681099e4D5c0679'
 
 # deposit amount in wei, ex: 1ETH
 DEPOSIT_AMOUNT="1000000000000000000"
 
 # Set maxCostAllowed in wei, ex: 0.5ETH
 MAX_COST_ALLOWED="500000000000000000"
+
+# another user address for testing
+USER1_PRIVATE_KEY=""
+USER1_ADDRESS=""
+
+USER2_PRIVATE_KEY=''
+USER2_ADDRESS=''
+
+AA_ADDRESS=''
